# srt_to_udp_server

./: .gitignore  CMakeLists.txt  LISENCE.md  NetBridge.cpp  NetBridge.h  README.md  SECURITY.md  config.ini  main.cpp  test_mpsrtts.cpp
.github/workflows/: centos.yml  macos.yml  ubuntu.yml  windows.yml
restapi/: LICENSE  RESTInterface.cpp  RESTInterface.hpp
